--- a/JS project/index.html
+++ b/JS project/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="index.css">
 </head>
 <body style="background-color: black ;">
@@ -85,7 +86,9 @@
     </div>
     <button onclick="
         invert();
-    ">Inverse Light</button>
+    " >
+    <div class="mode"><span class="material-symbols-outlined">light_mode</span></div>
+    Inverse Light</button>
     <script src="index.js"></script>
 </body>
 </html>
